--- a/Lab2/style.css
+++ b/Lab2/style.css
@@ -8,24 +8,31 @@ body{
     text-shadow:1px 1px black;
 }
 body.f1{
-    background-image: url(pics/1.jpg);
+    background-image: url(pics/1.jpg),url(pics/3.jpg);
     
    
 }
+.avtar{
+	border-radius: 350px;
+	padding-top: 50px;
+}
+.bio{
+    font-style:italic;
+}
 body.f2{
-    background-image: url(pics/2.jpg);
+    background-image: url(pics/2.jpg), url(pics/3.jpg);
 }
 .form1{
     position: absolute;
     left:43%;
-    top:25%;
+    top:85%;
     background-color: rgba(187, 188, 123, 0.544);
     border-radius:7px;
 }
 .form2{
     position: absolute;
-    left:39%;
-    top:25%;
+    left:38%;
+    top:85%;
     background-color: rgba(187, 188, 123, 0.544);
     border-radius:7px;
 }
@@ -34,7 +41,6 @@ h1{
 }
 a{
     font-size:16px;
-    text-shadow:none;
 }
 .inputcolor{
     border-top-left-radius: 5px;
@@ -48,7 +54,7 @@ input{
     font-family:"Oswald";
 }
 .copyright{
-    top:850px;
+    top:1350px;
     left:48%;
     position: absolute;
     font-size:10px;
